@@ -75,6 +75,7 @@ v15.0.00
 		Students: added ability to delete files and upload multiple files in Edit Application Form
 		Students: amended Academic alert to account only for data in the last 60 days
 		Students: when Timetable is disabled, View Student Details now displays list of classes in Overview
+		Students: adjusted Application Form acceptance emails to students and parents to come from admissions administrator, not system administrator 
 		System Admin: increased length of Absolute URL and Absolute Path to 100 characters
         System Admin: updated version check to handle semantic version numbers
 		Timetable: added ability to set and display text and background colour for timetable day headers
